# chatbot-imgui

./: CMakeLists .txt  CMakeLists.txt  README.md  imgui.ini
data/: chats.txt  chats_history.txt  trainingdata.txt
include/: response.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: main.cpp  response.cpp  response.h
